# MagentaRapidsFrontend

./: .pre-commit-config.yaml  Dockerfile  README.md  api.Dockerfile  client.Dockerfile  docker-compose.debug.yml  docker-compose.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.instrument/: docker-compose.yml  targets.mk
api/: main.py  worker.py
api/config/: settings.py
api/extensions/: tracing.py
api/managers/: connection.py  message.py
api/middlewares/: debugging.py  tracing.py
api/models/: event.py  message.py  note.py
api/routers/: root.py
api/tasks/: worker.py
public/: index.html  manifest.json
src/: App.css  App.js  constants.js
src/components/: App.css  App.js  App.test.js  HomePage.js
src/components/Audio/: Audio.js  AudioSend.js
src/components/Sketch/: Sketch.js  SketchContainer.js
src/components/audio/: Audio.js  AudioSend.js
src/components/layout/: BaseLayout.js  Header.js
src/components/pages/: HomePage.js
src/components/sketch/: Sketch.js  SketchContainer.js
src/components/text/: LastPlayedNote.js
src/components/timeseries/: TimeseriesChart.js
