[tool.poetry]
name = "magenta-rapids-api"
version = "0.1.0"
description = ""
authors = ["Aaron Grisez <acgrisez@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {extras = ["all"], version = "^0.54.1"}
pydantic = "^1.5.1"
sqlalchemy = "^1.3.16"
soundfile = "^0.10.3"
numpy = "^1.18.4"
scipy = "^1.4.1"
schedule = "^0.6.0"
jaeger-client = "^4.3.0"
semver = "^2.10.1"
aiocache = {extras = ["redis"], version = "^0.11.1"}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.1"
flake8 = "^3.7.9"
mypy = "^0.770"
autoflake = "^1.3.1"
coverage = "^5.1"
pre-commit = "^2.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
